NetBSD Problem Report #41134

From www@NetBSD.org  Fri Apr  3 23:57:24 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 5D6B363B946
	for <gnats-bugs@gnats.netbsd.org>; Fri,  3 Apr 2009 23:57:24 +0000 (UTC)
Message-Id: <20090403235724.2B79B63B8C8@www.NetBSD.org>
Date: Fri,  3 Apr 2009 23:57:24 +0000 (UTC)
From: eravin@panix.com
Reply-To: eravin@panix.com
To: gnats-bugs@NetBSD.org
Subject: @ command has become a no-op in NetBSD 5.0 RC3
X-Send-Pr-Version: www-1.0

>Number:         41134
>Category:       bin
>Synopsis:       @ command has become a no-op in NetBSD 5.0 RC3
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    jld
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Apr 04 00:00:01 +0000 2009
>Closed-Date:    Sun Apr 05 23:01:16 +0000 2009
>Last-Modified:  Sun Apr 05 23:01:16 +0000 2009
>Originator:     Ed Ravin
>Release:        5.0_RC3
>Organization:
Public Access Networks
>Environment:
NetBSD panix5.panix.com 5.0_RC2 NetBSD 5.0_RC2 (PANIX-XEN3U-USER-pae) #1: Sat Feb 21 20:24:11 EST 2009  root@juggler.panix.com:/misc1/obj/misc2/devel/netbsd/5.0-RC2/src/sys/arch/i386/compile/PANIX-XEN3U-USER-pae i386
>Description:
The @ command ain't working.  Create a command, say:

  !!pwd

Copy that line into buffer 'a' with the command: "ayy

Try to execute it with the command: @a

And nothing happens.  In NetBSD 4.0, or in a normal copy of nvi-1.81.6,
it will execute the "pwd" command and put the results into the document.

>How-To-Repeat:

>Fix:
According to an unnamed NetBSD developer: Christos misread some parentheses when trying to fix an operator precedence warning, and changed the meaning of a complicated expression.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: bin-bug-people->jld
Responsible-Changed-By: jld@NetBSD.org
Responsible-Changed-When: Sat, 04 Apr 2009 00:57:14 +0000
Responsible-Changed-Why:
I have a patch.


From: Jed Davis <jld@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41134 CVS commit: src/dist/nvi/vi
Date: Sat, 4 Apr 2009 01:13:43 +0000

 Module Name:	src
 Committed By:	jld
 Date:		Sat Apr  4 01:13:43 UTC 2009

 Modified Files:
 	src/dist/nvi/vi: v_at.c

 Log Message:
 Make vi's '@' command work again; a precedence warning fix in r1.2 added
 parens in the wrong place such that '@' did nothing.  Needs pullup to -5.

 Reported by Ed Ravin; fixes PR 41134.


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 src/dist/nvi/vi/v_at.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41134 CVS commit: [netbsd-5] src/dist/nvi/vi
Date: Sat, 4 Apr 2009 23:47:47 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sat Apr  4 23:47:47 UTC 2009

 Modified Files:
 	src/dist/nvi/vi [netbsd-5]: v_at.c

 Log Message:
 Pull up following revision(s) (requested by jld in ticket #668):
 	dist/nvi/vi/v_at.c: revision 1.3
 Make vi's '@' command work again; a precedence warning fix in r1.2 added
 parens in the wrong place such that '@' did nothing.  Needs pullup to -5.
 Reported by Ed Ravin; fixes PR 41134.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.2.6.1 -r1.1.1.2.6.2 src/dist/nvi/vi/v_at.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: jld@NetBSD.org
State-Changed-When: Sun, 05 Apr 2009 23:01:16 +0000
State-Changed-Why:
Fix has been committed and pulled up,
and the submitter has confirmed the fixedness.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.