Pull up following revision(s) (requested by jld in ticket #668): 	dist/nvi/vi/v_at.c: revision 1.3 Make vi's '@' command work again; a precedence warning fix in r1.2 added parens in the wrong place such that '@' did nothing.  Needs pullup to -5. Reported by Ed Ravin; fixes PR 41134.